# sentiment-analysis

./: README.md  pyproject.toml
models/: sentiment_xgb_model.json  tfidf_vectorizer.pkl
src/app/: Dockerfile  main.py  requirements.txt
src/data/: load_data.py  preprocess.py
src/model/: inference.py  train.py
tests/data/: test_load_data.py  test_preprocess.py
tests/data/fixtures/: fixtures_load_data.yaml  fixtures_preprocess.yaml
tests/model/: test_inference.py  test_train.py
tests/model/fixtures/: fixtures_inference.yaml  fixtures_train.yaml
